--- a/maple.qrc
+++ b/maple.qrc
@@ -5,5 +5,6 @@
         <file>images/application-exit.png</file>
         <file>images/settings.png</file>
         <file>images/clear.png</file>
+        <file>images/logo.ico</file>
     </qresource>
 </RCC>
